--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Aura AI</title>
+    <title>Classifier</title>
 
 
     <!-- ===============================================-->
