--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,6 @@
               <li class="nav-item px-2"><a class="nav-link" href="#services">Services</a></li>
               <li class="nav-item px-2"><a class="nav-link" href="#work">How it Works</a></li>
             </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="{% url 'accounts:login' %}">Sign In</a>
-            </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="{% url 'accounts:psyclogin' %}">Psychiatrist</a>
           </div>
         </div>
       </nav>
@@ -62,7 +61,7 @@
           <div class="row min-vh-xl-100 min-vh-xxl-25">
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="static/assets/img/gallery/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
-              <h1 class="fw-light font-base fs-6 fs-xxl-7">We're <strong>determined </strong>for<br />your&nbsp;<strong>better life.</strong></h1>
+              <h1 class="fw-light font-base fs-6 fs-xxl-7">We're <strong>determined </strong>for<br />your&nbsp;<strong>crops health.</strong></h1>
               <p class="fs-1 mb-5">Aura AI can help you recover from your mental health problems by engaging with you in a meaningful human like conversation as it figures out the best solution that fits your condition right. </p>
             </div>
           </div>
