--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
             <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="static/assets/img/gallery/hero.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
               <h1 class="fw-light font-base fs-6 fs-xxl-7">We're <strong>determined </strong>for<br />your&nbsp;<strong>crops health.</strong></h1>
-              <p class="fs-1 mb-5">Aura AI can help you recover from your mental health problems by engaging with you in a meaningful human like conversation as it figures out the best solution that fits your condition right. </p>
+              <p class="fs-1 mb-5">This classifier model, takes images of tomato leaves affected by different diseases then gives back a prediction of the exact disease affecting the crop.</p>
             </div>
           </div>
         </div>
@@ -102,28 +102,28 @@
             <div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="static/assets/img/icons/neurology.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/neurology.svg" alt="..." />
-                    <p class="fs-1 fs-xxl-2 text-center">Find out the problem</p>
+                    <p class="fs-1 fs-xxl-2 text-center">Register</p>
                   </a></div>
               </div>
             </div>
             <div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="static/assets/img/icons/eye-care.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/eye-care.svg" alt="..." />
-                    <p class="fs-1 fs-xxl-2 text-center">Diagonise a specific problem</p>
+                    <p class="fs-1 fs-xxl-2 text-center">Log In</p>
                   </a></div>
               </div>
             </div>
             <div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="static/assets/img/icons/cardiac.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/cardiac.svg" alt="..." />
-                    <p class="fs-1 fs-xxl-2 text-center">Figure out the solution</p>
+                    <p class="fs-1 fs-xxl-2 text-center">Upload Image</p>
                   </a></div>
               </div>
             </div>
             <div class="col-auto col-md-4 col-lg-auto text-xl-start">
               <div class="d-flex flex-column align-items-center">
                 <div class="icon-box text-center"><a class="text-decoration-none" href="#!"><img class="mb-3 deparment-icon" src="static/assets/img/icons/heart.png" alt="..." /><img class="mb-3 deparment-icon-hover" src="assets/img/icons/heart.svg" alt="..." />
-                    <p class="fs-1 fs-xxl-2 text-center">Offer the solution to the client</p>
+                    <p class="fs-1 fs-xxl-2 text-center">Get a Prediction</p>
                   </a></div>
               </div>
             </div>
@@ -145,8 +145,8 @@
           <div class="row align-items-center">
             <div class="col-md-5 col-xxl-6"><img class="img-fluid" src="static/assets/img/gallery/AIandMentalHealth1.png" alt="..." /></div>
             <div class="col-md-7 col-xxl-6 text-center text-md-start">
-              <h2 class="fw-bold text-light mb-4 mt-4 mt-lg-0">Mental Health Care with top AI<br class="d-none d-sm-block" />and High Accuracy.</h2>
-              <p class="text-light">We've built an AI that will walk with you through the path of getting better everyday.<br class="d-none d-sm-block" />Here, there is nothing more important than your mental health and <br class="d-none d-sm-block" />that of your loved ones. </p>
+              <h2 class="fw-bold text-light mb-4 mt-4 mt-lg-0">Tomato Diseases Classification with top AI<br class="d-none d-sm-block" />and High Accuracy.</h2>
+              <p class="text-light">This model will give you the ability to identify the diseases affecting your tomato crops anyday.<br class="d-none d-sm-block" />The health of your tomato crops can be improved and <br class="d-none d-sm-block" />result to high quality yields </p>
             </div>
           </div>
         </div>
@@ -184,8 +184,8 @@
           <div class="row align-items-center">
             <div class="col-md-6 order-lg-1 mb-5 mb-lg-0"><img class="fit-cover rounded-circle w-100" src="static/assets/img/gallery/AIChatbots1.png" alt="..." /></div>
             <div class="col-md-6 text-center text-md-start">
-              <h2 class="fw-bold mb-4">We are improving access to <br class="d-none d-sm-block" />mental health help</h2>
-              <p>We believe that everyone should have easy access to <br class="d-none d-sm-block" />mental health help. Our main objective is to simplify its access <br class="d-none d-sm-block" />to anyone who might need it<br class="d-none d-sm-block" />where he/she is at any time. </p>
+              <h2 class="fw-bold mb-4">The model can accurately predict upto 6 distinct diseases that affect the leaves <br class="d-none d-sm-block" />classifier</h2>
+              <p>Improvement of tomato crops health is of high priority<br class="d-none d-sm-block" />this can be done through innovating the way we detect diseases <br class="d-none d-sm-block" />as first as possible<br class="d-none d-sm-block" />using Artificial Intelligence </p>
             </div>
           </div>
         </div>
@@ -261,8 +261,8 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h2 class="fw-bold text-light">Get Help Any Time</h2>
-              <p class="text-soft-primary">Aura AI is created in order to improve access to mental health help. <br />Providing 24/7 instant access and help.</p>
+              <h2 class="fw-bold text-light">Tomato Disease Classifier</h2>
+              <p class="text-soft-primary">The technology used here is simple yet effective. <br />Shortens the efforts and costs used to identify diseases that affect the crops.</p>
             </div>
           </div>
         </div>
@@ -280,9 +280,9 @@
             <div class="col-6 col-sm-4 col-lg-2 mb-3 order-2 order-sm-1">
               <h5 class="lh-lg fw-bold mb-4 text-light font-sans-serif">Services</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="footer-link" href="#!">Find out the problem</a></li>
-                <li class="lh-lg"><a class="footer-link" href="#!">Figure out the solution</a></li>
-                <li class="lh-lg"><a class="footer-link" href="#!">Solve the problem</a></li>
+                <li class="lh-lg"><a class="footer-link" href="#!">Upload images of the affected leaves</a></li>
+                <li class="lh-lg"><a class="footer-link" href="#!">The model classifier identifies and predicts the exact disease</a></li>
+                <li class="lh-lg"><a class="footer-link" href="#!">The prediction is given back to you</a></li>
               </ul>
             </div>
             <div class="col-6 col-sm-4 col-lg-2 mb-3 order-3 order-sm-2">
@@ -303,7 +303,7 @@
           <div class="container">
             <div class="row justify-content-md-between justify-content-evenly py-4">
               <div class="col-12 col-sm-8 col-md-6 col-lg-auto text-center text-md-start">
-                <p class="fs--1 my-2 fw-bold text-200">All rights Reserved &copy; Aura AI, <script>document.write(new Date().getFullYear());</script></p>
+                <p class="fs--1 my-2 fw-bold text-200">All rights Reserved &copy; Tomato Disease Classifier, <script>document.write(new Date().getFullYear());</script></p>
               </div>
             </div>
           </div>
