--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{%load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 
@@ -242,7 +242,7 @@
 
             <div class="col-sm-6 col-lg-3 mb-4">
               <div class="card h-100 shadow card-span rounded-3"><img class="card-img-top rounded-top-3" src="/media/{{i.image}}" alt="function" />
-                <div class="card-body"><span class="fs--1 text-primary me-3">Mental Health</span>
+                <div class="card-body"><span class="fs--1 text-primary me-3">Tomato Disease Classifier</span>
                   <h5 class="font-base fs-lg-0 fs-xl-1 my-3"> {{ i.desc }} </h5>
                 </div>
               </div>
