--- a/templates/accounts/sign_up.html
+++ b/templates/accounts/sign_up.html
@@ -5,7 +5,10 @@
     <form action="" method="POST">
       {% csrf_token %}
       <div class="input-box">
-        <input type="text" name="full_name" placeholder="Enter your full name" required>
+        <input type="text" name="first_name" placeholder="Enter your first name" required>
+      </div>
+      <div class="input-box">
+        <input type="text" name="last_name" placeholder="Enter your last name" required>
       </div>
       <div class="input-box">
         <input type="text" name="username" placeholder="Enter your username" required>
