customizing the UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
 
         <div class="container">
           <div class="row min-vh-xl-100 min-vh-xxl-25">
-            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="static/assets/img/gallery/hero.png" alt="hero-header" /></div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="static/assets/img/gallery/tm1.jpg" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
               <h1 class="fw-light font-base fs-6 fs-xxl-7">We're <strong>determined </strong>for<br />your&nbsp;<strong>crops health.</strong></h1>
               <p class="fs-1 mb-5">This classifier model, takes images of tomato leaves affected by different diseases then gives back a prediction of the exact disease affecting the crop.</p>
@@ -143,7 +143,7 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-5 col-xxl-6"><img class="img-fluid" src="static/assets/img/gallery/AIandMentalHealth1.png" alt="..." /></div>
+            <div class="col-md-5 col-xxl-6"><img class="img-fluid" src="static/assets/img/gallery/ai_classification1.jpg" alt="..." /></div>
             <div class="col-md-7 col-xxl-6 text-center text-md-start">
               <h2 class="fw-bold text-light mb-4 mt-4 mt-lg-0">Tomato Diseases Classification with top AI<br class="d-none d-sm-block" />and High Accuracy.</h2>
               <p class="text-light">This model will give you the ability to identify the diseases affecting your tomato crops anyday.<br class="d-none d-sm-block" />The health of your tomato crops can be improved and <br class="d-none d-sm-block" />result to high quality yields </p>
@@ -182,7 +182,7 @@
 
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 order-lg-1 mb-5 mb-lg-0"><img class="fit-cover rounded-circle w-100" src="static/assets/img/gallery/AIChatbots1.png" alt="..." /></div>
+            <div class="col-md-6 order-lg-1 mb-5 mb-lg-0"><img class="fit-cover rounded-circle w-100" src="static/assets/img/gallery/ai_classification2.png" alt="..." /></div>
             <div class="col-md-6 text-center text-md-start">
               <h2 class="fw-bold mb-4">The model can accurately predict upto 6 distinct diseases that affect the leaves <br class="d-none d-sm-block" />classifier</h2>
               <p>Improvement of tomato crops health is of high priority<br class="d-none d-sm-block" />this can be done through innovating the way we detect diseases <br class="d-none d-sm-block" />as first as possible<br class="d-none d-sm-block" />using Artificial Intelligence </p>
