--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="#about">About Us</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#services">Services</a></li>
-              <li class="nav-item px-2"><a class="nav-link" href="#work">How it Works</a></li>
+              <!-- <li class="nav-item px-2"><a class="nav-link" href="#services">Services</a></li>
+              <li class="nav-item px-2"><a class="nav-link" href="#work">How it Works</a></li> -->
             </ul><a class="btn btn-sm btn-outline-primary rounded-pill order-1 order-lg-0 ms-lg-4" href="{% url 'accounts:login' %}">Sign In</a>
           </div>
         </div>
@@ -59,7 +59,7 @@
 
         <div class="container">
           <div class="row min-vh-xl-100 min-vh-xxl-25">
-            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="static/assets/img/gallery/tm1.jpg" alt="hero-header" /></div>
+            <div class="col-md-5 col-xl-6 col-xxl-7 order-0 order-md-1 text-end"><img class="pt-7 pt-md-0 w-100" src="static/assets/img/gallery/tm1_f_rbg.png" alt="hero-header" /></div>
             <div class="col-md-75 col-xl-6 col-xxl-5 text-md-start text-center py-6">
               <h1 class="fw-light font-base fs-6 fs-xxl-7">We're <strong>determined </strong>for<br />your&nbsp;<strong>crops health.</strong></h1>
               <p class="fs-1 mb-5">This classifier model, takes images of tomato leaves affected by different diseases then gives back a prediction of the exact disease affecting the crop.</p>
