--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
               </div>
               <!--/.bg-holder-->
 
-              <h1 class="text-center">SERVICES</h1>
+              <!-- <h1 class="text-center">SERVICES</h1> -->
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-      <section class="py-0">
+      <!-- <section class="py-0">
 
         <div class="container">
           <div class="row py-5 align-items-center justify-content-center justify-content-lg-evenly">
@@ -131,7 +131,7 @@
         </div>
         <!-- end of .container-->
 
-      </section>
+      </section> -->
       <!-- <section> close ============================-->
       <!-- ============================================-->
 
